--- a/QuanLyTour/Views/Admin/ThemTourView.cshtml
+++ b/QuanLyTour/Views/Admin/ThemTourView.cshtml
@@ -25,7 +25,7 @@
                                 <input type="text" class="form-control" id="donGia" placeholder="Giá tour" name="giaTour" required>
                             </div>
                             <div class="form-group">
-                                <label for="tenLoaiPhong">Loại Phòng</label>
+                                <label for="tenLoaiPhong">Khu Vực </label>
                                 <select class="form-control" name="maLoai">
                                     @foreach (var tourTypes in Model)
                                     {
