--- a/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
+++ b/QuanLyTour/Views/Home/ThongTinNguoiDung.cshtml
@@ -40,6 +40,11 @@
                         <label for="SoDienThoai">Số điện thoại</label>
                         <input type="text" class="form-control" id="SoDienThoai" name="SoDienThoai" value="@Model.SoDienThoai" required />
                     </div>
+                    <div class="form-group">
+                        <label for="Email">Email</label>
+                        <input type="email" class="form-control" id="Email" name="Email" value="@Model.Email" required />
+
+                    </div>
                     <input type="hidden" name="MaNguoiDung" value="@Model.MaNguoiDung" />
                     <button type="submit" class="btn btn-orange btn-block">Lưu thay đổi</button>
                </form>
