--- a/QuanLyTour/Views/Home/DangKy.cshtml
+++ b/QuanLyTour/Views/Home/DangKy.cshtml
@@ -38,6 +38,10 @@
                                     <input type="text" class="form-control" placeholder="Số điện thoại" required name="SoDienThoai" />
                                     <span><i class="fa fa-phone"></i></span>
                                 </div>
+                                <div class="form-group">
+                                    <input type="email" class="form-control" placeholder="Email" required name="Email" />
+                                    <span><i class="fa fa-email"></i></span>
+                                </div>
 
                                 <!-- Hiển thị thông báo lỗi nếu có -->
                                 @if (!string.IsNullOrEmpty(errorMessage))
