--- a/QuanLyTour/Views/Shared/_Detail.cshtml
+++ b/QuanLyTour/Views/Shared/_Detail.cshtml
@@ -127,6 +127,9 @@
                     <li class="dropdown active">
                         <a href="@Url.Action("Index","Home")">Trang chủ<span></span></a>
                     </li>
+                    <li class="dropdown active">
+                        <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
+                    </li>
                 </ul>
             </div><!-- end navbar collapse -->
         </div><!-- end container -->
@@ -140,6 +143,7 @@
                     <ul class="breadcrumb">
                         <li><a href="#">Home</a></li>
                         <li class="active">@ViewData["Title"]</li>
+
                     </ul>
                 </div><!-- end columns -->
             </div><!-- end row -->
