--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -127,7 +127,10 @@
                     <div class="collapse navbar-collapse" id="myNavbar1">
                         <ul class="nav navbar-nav navbar-right">
                             <li class="dropdown active">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Trang chủ<span></span></a>
+                                <a href="@Url.Action("Index","Home")">Trang chủ<span></span></a>
+                            </li>
+                            <li class="dropdown active">
+                                <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
                             </li>
                          
                             <li><a href="javascript:void(0)" class="search-button"><span><i class="fa fa-search"></i></span></a></li>
