--- a/QuanLyTour/Views/Shared/_LoginUser.cshtml
+++ b/QuanLyTour/Views/Shared/_LoginUser.cshtml
@@ -86,7 +86,11 @@
                     <li class="dropdown active">
                         <a href="@Url.Action("Index","Home")">Trang chủ<span></span></a>
                     </li>
-                    @*  <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Loại Phòng<span><i class="fa fa-angle-down"></i></span></a>
+                    <li class="dropdown active">
+                        <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
+                    </li>
+
+                    @* <li class="dropdown"><a href="#" class="dropdown-toggle" data-toggle="dropdown">Loại Phòng<span><i class="fa fa-angle-down"></i></span></a>
                     <ul class="dropdown-menu">
                     @foreach (var item in Model.LoaiPhongView)
                     {
@@ -95,7 +99,7 @@
 
                     </ul>
                     </li>
-                    <li><a href="javascript:void(0)" class="search-button"><span><i class="fa fa-search"></i></span></a></li> *@
+                    <li><a href="javascript:void(0)" class="search-button"><span><i class="fa fa-search"></i></span>Tìm Kiếm</a></li> *@
                 </ul>
             </div><!-- end navbar collapse -->
         </div><!-- end container -->
