--- a/QuanLyTour/Views/Shared/_Detail.cshtml
+++ b/QuanLyTour/Views/Shared/_Detail.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿ <!DOCTYPE html>
 <html lang="en">
 <head>
     <title>Hotel Homepage</title>
@@ -44,7 +44,6 @@
     <!--====== LOADER =====-->
     <div class="loader"></div>
 
-
     <!--======== SEARCH-OVERLAY =========-->
     <div class="overlay">
         <a href="javascript:void(0)" id="close-button" class="closebtn">&times;</a>
@@ -62,7 +61,6 @@
                             </span>
                         </div><!-- end input-group -->
                     </div>
-
                     <!-- end form-group -->
                 }
             </div><!-- end form-center -->
@@ -129,6 +127,15 @@
                     </li>
                     <li class="dropdown active">
                         <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="@Url.Action("KhachSan","Home")">Khách Sạn<span></span></a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="@Url.Action("VeMayBay","Home")">Vé Máy Bay<span></span></a>
+                    </li>
+                    <li class="dropdown active">
+                        <a href="@Url.Action("VeTau","Home")">Vé Tàu<span></span></a>
                     </li>
                 </ul>
             </div><!-- end navbar collapse -->
