--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -108,7 +108,6 @@
 
 
     <section class="flexslider-container" id="flexslider-container-3">
-
         <div class="header-absolute">
             <nav class="navbar navbar-default main-navbar navbar-custom navbar-transparent" id="mynavbar">
                 <div class="container">
@@ -132,7 +131,15 @@
                             <li class="dropdown active">
                                 <a href="@Url.Action("HoTro","Home")">Hỗ Trợ<span></span></a>
                             </li>
-                         
+                            <li class="dropdown active">
+                                <a href="@Url.Action("KhachSan","Home")">Khách Sạn<span></span></a>
+                            </li>
+                            <li class="dropdown active">
+                                <a href="@Url.Action("VeMayBay","Home")">Vé Máy Bay<span></span></a>
+                            </li>
+                            <li class="dropdown active">
+                                <a href="@Url.Action("VeTau","Home")">Vé Tàu<span></span></a>
+                            </li>
                             <li><a href="javascript:void(0)" class="search-button"><span><i class="fa fa-search"></i></span></a></li>
                         </ul>
                     </div><!-- end navbar collapse -->
