--- a/QuanLyTour/Views/Admin/Index.cshtml
+++ b/QuanLyTour/Views/Admin/Index.cshtml
@@ -45,7 +45,5 @@
                 </div><!-- end columns -->
             </div><!-- end row -->
         </div><!-- end container -->
-    </div><!-- end login add
-
-    -->
+    </div><!-- end login add -->
 </section><!-- end innerpage-wrapper -->
