--- a/QuanLyTour/Views/Home/Index.cshtml
+++ b/QuanLyTour/Views/Home/Index.cshtml
@@ -83,8 +83,8 @@
                                             <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
                                         </h4>
                                         <div class="tour-duration">
-                                            <i class="fa fa-clock-o" aria-hidden="true"></i>
-                                            <span>6 Ngày 5 Đêm</span>
+                                            <i class="fa fa-clock-o" aria-hidden="true"><span>6 Ngày 5 Đêm</span></i>
+                                         
                                             <span><i class="fa fa-plane" aria-hidden="true"></i><i class="fa fa-bus" aria-hidden="true"></i><i class="fa fa-train" aria-hidden="true"></i></span>
                                         </div>
                                         <div class="tour-highlights">
