--- a/QuanLyTour/Views/Shared/_Layout.cshtml
+++ b/QuanLyTour/Views/Shared/_Layout.cshtml
@@ -162,7 +162,7 @@
         <div class="flexslider slider" id="slider-3">
             <ul class="slides">
 
-                <li class="item-1 back-size" style="background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(hinhanh/banner_tour.jpg) 50% 65%;
+                <li class="item-1 back-size" style="background:linear-gradient(rgba(0,0,0,0.3),rgba(0,0,0,0.3)),url(hinhanh/KhachSan.jpg) 50% 65%;
 	background-size:cover;
 	height:100%;">
                 </li><!-- end item-1 -->
