add songay điaiem

--- a/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
+++ b/QuanLyTour/Views/Admin/QuanLyTourView.cshtml
@@ -51,6 +51,8 @@
                                 <th>Mã Tour</th>
                                 <th>Tên Tour</th>
                                 <th>Loại Tour</th>
+                                <th>Số Ngày</th>
+                                <th>Địa Điểm</th>
                                 <th>GiaTour</th>
                                 <th>Hình Ảnh 1</th>
                                 <th>Hình Ảnh 2</th>
@@ -69,6 +71,8 @@
                                     <td>@tour.MaTour</td>
                                     <td>@tour.TenTour</td>
                                     <td>@tour.TenLoaiTour</td>
+                                    <td>@tour.SoNgay</td>
+                                    <td>@tour.DiaDiem</td>
                                     <td>@tour.GiaTour.ToString("#,##") VND</td>
                                     <td>
                                         <img src="@Url.Content("~/hinhanh/" + tour.HinhAnh1)" alt="Hình ảnh phòng" width="100" height="100" />
