--- a/QuanLyTour/Views/Admin/ThemTourView.cshtml
+++ b/QuanLyTour/Views/Admin/ThemTourView.cshtml
@@ -21,6 +21,14 @@
                                 <input type="text" class="form-control" id="tenPhong" placeholder="Tên tour" name="tenTour" required>
                             </div>
                             <div class="form-group">
+                                <label for="soNgay">Số Ngày</label>
+                                <input type="text" class="form-control" id="soNgay" placeholder="Số Ngày" name="soNgay" required>
+                            </div>
+                            <div class="form-group">
+                                <label for="diaDiem">Địa Điểm</label>
+                                <input type="text" class="form-control" id="diaDiem" placeholder="Địa Điểm" name="diaDiem" required>
+                            </div>
+                            <div class="form-group">
                                 <label for="donGia">Giá Tour</label>
                                 <input type="text" class="form-control" id="donGia" placeholder="Giá tour" name="giaTour" required>
                             </div>
