--- a/QuanLyTour/Views/Home/Index.cshtml
+++ b/QuanLyTour/Views/Home/Index.cshtml
@@ -83,6 +83,7 @@
                                             <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
                                         </h4>
                                         <div class="tour-duration">
+                                                <span><i class="fa fa-clock-o" aria-hidden="true"></i></span>
                                                 <div>@($"{tour.SoNgay}")</div>
                                         </div>
                                         <div class="tour-highlights">
