--- a/QuanLyTour/Views/Home/Index.cshtml
+++ b/QuanLyTour/Views/Home/Index.cshtml
@@ -73,7 +73,7 @@
                         {
                             <div class="item">
                                 <div class="tour-card">
-                                    <div class="tour-img-container" style="position: relative;">
+                                    <div class="tour-img-container">
                                         <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">
                                             <img src="@Url.Content($"~/hinhanh/{tour.HinhAnh1}")" class="img-responsive" alt="@tour.TenTour"/>
                                         </a>
