--- a/QuanLyTour/Views/Tour/DanhMucTour.cshtml
+++ b/QuanLyTour/Views/Tour/DanhMucTour.cshtml
@@ -30,20 +30,26 @@
                                     @foreach (var tour in Model.TourTrongNuoc)
                                     {
                                         <div class="col-sm-6 col-md-6 col-lg-4">
-                                            <div class="grid-block main-block h-grid-block">
+                                            <div class="grid-block main-block h-grid-block tour-card">
                                                 <div class="main-img h-grid-img">
                                                     <a href="@Url.Action("ChiTietTour", "Tour", new { maTour = tour.MaTour, maLoai = tour.MaLoaiTour })">
                                                         <img src="~/hinhanh/@tour.HinhAnh1" class="img-responsive" alt="@tour.TenTour" />
                                                     </a>
-                                                    <div class="main-mask">
-                                                        <ul class="list-unstyled list-inline offer-price-1">
-                                                            <li class="price">@tour.GiaTour.ToString("#,##0 VND")<span class="divider">|</span><span class="pkg">1 người</span></li>
-                                                        </ul>
-                                                    </div>
                                                 </div>
-                                                <div class="block-info h-grid-info">
-                                                    <h3 class="block-title"><a href="@Url.Action("ChiTietTour", "Tour", new { maTour = tour.MaTour, maLoai = tour.MaLoaiTour })">@tour.TenTour</a></h3>
-                                                    <p class="block-minor">@tour.TenLoaiTour</p>
+                                                <div class="block-info h-grid-info tour-content">
+                                                    <h4>
+                                                        <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
+                                                    </h4>
+                                                    <div class="tour-duration">
+                                                        <i class="fa fa-clock-o"></i>
+                                                        <span>@($"{tour.SoNgay} Ngày {tour.SoNgay} Đêm")</span>
+                                                    </div>
+                                                    <div class="tour-highlight">
+                                                        Điểm đến: @(tour.DiaDiem ?? "")
+                                                    </div>
+                                                    <div class="tour-price">
+                                                        <div>@tour.GiaTour.ToString("#,##0") VNĐ</div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
@@ -69,20 +75,26 @@
                                     @foreach (var tour in Model.TourNuocNgoai)
                                     {
                                         <div class="col-sm-6 col-md-6 col-lg-4">
-                                            <div class="grid-block main-block h-grid-block">
+                                            <div class="grid-block main-block h-grid-block tour-card">
                                                 <div class="main-img h-grid-img">
                                                     <a href="@Url.Action("ChiTietTour", "Tour", new { maTour = tour.MaTour, maLoai = tour.MaLoaiTour })">
                                                         <img src="~/hinhanh/@tour.HinhAnh1" class="img-responsive" alt="@tour.TenTour" />
                                                     </a>
-                                                    <div class="main-mask">
-                                                        <ul class="list-unstyled list-inline offer-price-1">
-                                                            <li class="price">@tour.GiaTour.ToString("#,##0 VND")<span class="divider">|</span><span class="pkg">1 người</span></li>
-                                                        </ul>
-                                                    </div>
                                                 </div>
-                                                <div class="block-info h-grid-info">
-                                                    <h3 class="block-title"><a href="@Url.Action("ChiTietTour", "Tour", new { maTour = tour.MaTour, maLoai = tour.MaLoaiTour })">@tour.TenTour</a></h3>
-                                                    <p class="block-minor">@tour.TenLoaiTour</p>
+                                                <div class="block-info h-grid-info tour-content">
+                                                    <h4>
+                                                        <a href="@Url.Action("ChiTietTour","Tour",new {maTour = tour.MaTour, maLoai = tour.MaLoaiTour})">@tour.TenTour</a>
+                                                     </h4>
+                                                    <div class="tour-duration">
+                                                        <i class="fa fa-clock-o"></i>
+                                                        <span>@($"{tour.SoNgay} Ngày {tour.SoNgay} Đêm")</span>
+                                                    </div>
+                                                    <div class="tour-highlight">
+                                                        Điểm đến: @(tour.DiaDiem ?? "")
+                                                    </div>
+                                                    <div class="tour-price">
+                                                        <div>@tour.GiaTour.ToString("#,##0") VNĐ</div>
+                                                    </div>
                                                 </div>
                                             </div>
                                         </div>
