--- a/QuanLyTour/Views/Home/DangKy.cshtml
+++ b/QuanLyTour/Views/Home/DangKy.cshtml
@@ -40,7 +40,7 @@
                                 </div>
                                 <div class="form-group">
                                     <input type="email" class="form-control" placeholder="Email" required name="Email" />
-                                    <span><i class="fa fa-email"></i></span>
+                                    <span><i class="fa fa-envelope"></i></span>
                                 </div>
 
                                 <!-- Hiển thị thông báo lỗi nếu có -->
