--- a/QuanLyTour/wwwroot/css/style.css
+++ b/QuanLyTour/wwwroot/css/style.css
@@ -417,6 +417,10 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 	width:100%;
 }
 
+.nav .nav-tabs li a {
+    font-weight: bold;
+}
+
 /************* CRUISE HOMEPAGE *************/
 
 #cruise-homepage #top-bar{
@@ -494,15 +498,15 @@ h1,h2,h3,h4,h5,h6,.main-title a, .flight-info h3 .flight-destination,.blog-post-
 	background-color: #fff;
 }
 
-	.tour-card:hover {
-		transform: translateY(-10px);
-		transition: 0.5s;
-	}
+.tour-card:hover {
+	transform: translateY(-10px);
+	transition: 0.5s;
+}
 
-		.tour-card:hover .tour-img-container img {
-			transform: scale(1.15);
-			transition: 0.5s;
-		}
+.tour-card:hover .tour-img-container img {
+	transform: scale(1.15);
+	transition: 0.5s;
+}
 
 .tour-img-container {
 	position: relative;
