--- a/QuanLyTour/Views/Admin/Index.cshtml
+++ b/QuanLyTour/Views/Admin/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Trang qunr lý admin";
+    ViewData["Title"] = "Trang quản lý admin";
     Layout = "~/Views/Shared/_AdminLogin.cshtml";
 }
 <section class="innerpage-wrapper">
